[package]
name = "throttled"
version = "0.1.0"
authors = ["Ace Eldeib <alexeldeib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.31"
reqwest = { version = "^0.10.6", features = ["json"] }
smol = { version = "^0.1", features = ["tokio02"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[profile.release]
lto = true
