[package]
name = "throttled"
version = "0.1.0"
authors = ["Ace Eldeib <alexeldeib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["unstable"] }
bincode = "1.3.0"
eyre = "0.5.0"
futures = "0.3.5"
http = "0.2"
hyper = "0.13.6"
reqwest = { version = "0.10.6", features = ["json"] }
smol = { version = "0.1", features = ["tokio02"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-utils = "0.1.0"
prometheus = "0.8"
prometheus-static-metric = "0.1"
relative-path = "1.2.1"
walkdir = "2.3.1"
warp = "0.2.3"

[profile.release]
lto = true
